--- a/1. domaci/ZIDomaci/ZIDomaci/ZIDomaci.csproj
+++ b/1. domaci/ZIDomaci/ZIDomaci/ZIDomaci.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Cipher Keys\XXTEA\" />
+  </ItemGroup>
+
 </Project>
